
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = 'flask-quickstart'
description = 'A quick start for commonly used features of a Flask app'
version = '0.7.1'
authors = [
    { name='Fictive Kin LLC', email='hello@fictivekin.com' },
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development',
]
readme = "README.md"
license = 'MIT'
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.8"
dependencies = [
    'boto3',
    'botocore',
    'certifi',
    'dynaconf',
    'flask',
    'pytz',
    'werkzeug',
]

[project.optional-dependencies]
sentry = ['sentry-sdk[flask]']
csp = ['flask-csp']
cors = ['flask-cors']
full = [
    'flask-csp',
    'flask-cors',
    'sentry-sdk[flask]',
]

[project.urls]
Homepage = 'https://github.com/fictivekin/flask-quickstart'
